fix swagger 80% done
