# Routes/actorRoute.js
@@ -1,13 +1,14 @@
 const actorRoute = require("express").Router()
 const actorController = require("../controllers/actorController")
 const { validateActor, validatePartialActor, handleValidation } = require("../utils/actorValidation")
+const { requiresAuth } = require("express-openid-connect")
 
 actorRoute.get('/', actorController.findAll)
 actorRoute.get('/:id', actorController.findById)
 actorRoute.post('/search', validatePartialActor, handleValidation, actorController.findByQuery)
-actorRoute.post('/', validateActor, handleValidation, actorController.createActor)
-actorRoute.put('/:id', validateActor, handleValidation, actorController.updateActorById)
-actorRoute.delete('/:id', actorController.deleteActorById)
-actorRoute.delete('/', actorController.deleteAll)
+actorRoute.post('/', requiresAuth(), validateActor, handleValidation, actorController.createActor)
+actorRoute.put('/:id', requiresAuth(), validateActor, handleValidation, actorController.updateActorById)
+actorRoute.delete('/:id', requiresAuth(), actorController.deleteActorById)
+actorRoute.delete('/', requiresAuth(), actorController.deleteAll)
 
 module.exports = actorRoute
