# Routes/momentRoute.js
@@ -1,13 +1,14 @@
 const momentRoute = require("express").Router()
 const momentController = require("../controllers/momentController")
 const { validateMoment, validatePartialMoment, handleValidation } = require("../utils/momentValidation")
+const { requiresAuth } = require("express-openid-connect")
 
 momentRoute.get("/", momentController.findAll)
 momentRoute.get("/:id", momentController.findById)
 momentRoute.post("/search", validatePartialMoment, handleValidation, momentController.findByQuery)
-momentRoute.post("/", validateMoment, handleValidation, momentController.createMoment)
-momentRoute.put("/:id", validateMoment, handleValidation, momentController.updateMomentById)
-momentRoute.delete("/:id", momentController.deleteMomentById)
-momentRoute.delete("/", momentController.deleteAll)
+momentRoute.post("/", requiresAuth(), validateMoment, handleValidation, momentController.createMoment)
+momentRoute.put("/:id", requiresAuth(),  validateMoment, handleValidation, momentController.updateMomentById)
+momentRoute.delete("/:id", requiresAuth(),  momentController.deleteMomentById)
+momentRoute.delete("/", requiresAuth(), momentController.deleteAll)
 
 module.exports = momentRoute
